syntax = "proto3";

package tasksapi;

option go_package = "github.com/curioswitch/cookchat/tasks/api/go;tasksapi";

message FillPlanRequest {
  // ID of the plan to fill.
  string plan_id = 1;
}

message FillPlanResponse {}

service TasksService {
  // Fill details of a plan.
  rpc FillPlan(FillPlanRequest) returns (FillPlanResponse);
}
